# wmi-

./: CMakeLists.txt  LICENSE  README.md  library.cpp  library.h  main.cpp
Release/: wmi.h  wmi.lib
Release/x86_64/: wmi.lib
